# brock-python

./: README.md  data.py  pyproject.toml
brock/: __init__.py  data.py  utils.py
pybrock/: sports.py
