[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "brock"
author = "Brock Tibert"
author-email = "btibert3@gmail.com"
home-page = "https://brocktibert.com"

author = "Brock Tibert"
author-email = "btibert3@gmail.com"
home-page = "https://github.com/Btibert3/pypeds"
requires=[
    "pandas",
    "pantab"
]
requires-python=">=3.6"
description-file="README.md"